--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,17 +12,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "41\n"
+     ]
+    }
+   ],
    "source": [
     "from venue import Venue\n",
-    "from location import get_lat_long"
+    "from location import Location"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,6 +242,74 @@
    ],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reviews = venue.loc.google_reviews()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'reviews': [{'author_name': 'Mildred Bodden',\n",
+       "   'author_url': 'https://www.google.com/maps/contrib/105079390638186229528/reviews',\n",
+       "   'language': 'en',\n",
+       "   'profile_photo_url': 'https://lh4.ggpht.com/-ANhb3USkFtg/AAAAAAAAAAI/AAAAAAAAAAA/q4nIyqNoR5I/s128-c0x00000000-cc-rp-mo-ba4/photo.jpg',\n",
+       "   'rating': 5,\n",
+       "   'relative_time_description': '2 months ago',\n",
+       "   'text': \"I LOVE THE STAFF HERE! This was my last stop on my 21st birthday party and I've got to say I should have went there first. The drinks aren't expensive, they're tasty, the staff is inviting, patient and very friendly. This has become a go to spot for me now. Can't wait to come back here.\",\n",
+       "   'time': 1563395210},\n",
+       "  {'author_name': 'Jake Puzycki',\n",
+       "   'author_url': 'https://www.google.com/maps/contrib/104850028945628863386/reviews',\n",
+       "   'language': 'en',\n",
+       "   'profile_photo_url': 'https://lh4.ggpht.com/-_DeWRb8Z4vA/AAAAAAAAAAI/AAAAAAAAAAA/QEuU2NliH_4/s128-c0x00000000-cc-rp-mo-ba4/photo.jpg',\n",
+       "   'rating': 5,\n",
+       "   'relative_time_description': '3 months ago',\n",
+       "   'text': 'So good!!!! Such a weird totally sweet hole in the wall groove house dance experience. The drinks are bomb. Ash and salt- so good.',\n",
+       "   'time': 1560576526},\n",
+       "  {'author_name': 'Zack Hobbs',\n",
+       "   'author_url': 'https://www.google.com/maps/contrib/108845501207563055078/reviews',\n",
+       "   'language': 'en',\n",
+       "   'profile_photo_url': 'https://lh4.ggpht.com/-9aXWFe-MCYQ/AAAAAAAAAAI/AAAAAAAAAAA/aXA5zoCzVMQ/s128-c0x00000000-cc-rp-mo-ba4/photo.jpg',\n",
+       "   'rating': 5,\n",
+       "   'relative_time_description': '4 months ago',\n",
+       "   'text': \"Loved the decorations and style. Their sound system is amazing, well balanced and comes in clear and doesn't feel like you have to raise your voice to talk to someone over it. They display their drink menu on monitors using video game pixel fonts.\",\n",
+       "   'time': 1557196950},\n",
+       "  {'author_name': 'Alex Kelley',\n",
+       "   'author_url': 'https://www.google.com/maps/contrib/106035767050426130634/reviews',\n",
+       "   'language': 'en',\n",
+       "   'profile_photo_url': 'https://lh5.ggpht.com/-CQxbNUZYlmg/AAAAAAAAAAI/AAAAAAAAAAA/C6j4-8MRxt4/s128-c0x00000000-cc-rp-mo-ba2/photo.jpg',\n",
+       "   'rating': 5,\n",
+       "   'relative_time_description': 'a month ago',\n",
+       "   'text': 'The hole-in-the-wall bar you’ve always dreamed of',\n",
+       "   'time': 1565833451},\n",
+       "  {'author_name': 'Jean Santos',\n",
+       "   'author_url': 'https://www.google.com/maps/contrib/101815153012108886786/reviews',\n",
+       "   'language': 'en',\n",
+       "   'profile_photo_url': 'https://lh6.ggpht.com/-Rg7uJHaPyUk/AAAAAAAAAAI/AAAAAAAAAAA/kBSAR8J5LcA/s128-c0x00000000-cc-rp-mo-ba3/photo.jpg',\n",
+       "   'rating': 3,\n",
+       "   'relative_time_description': '3 months ago',\n",
+       "   'text': 'Not too bad. Quirky crowd that seems to have a good time, some chilling some going, bouncer is smart and laid back, $5 fee. Some nights have awesome djs playing tech house dark stuff dnb, but most nights have disco like tunes which isn’t for everyone (me being one).\\n\\nIt’s a nice little spot to keep in mind.',\n",
+       "   'time': 1558574796}]}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reviews"
    ]
   },
   {
